--- a/pages/About-Us.html
+++ b/pages/About-Us.html
@@ -45,27 +45,29 @@
         </section>
         <section class="Achievements">
             <h2>What we have achieved</h2>
+        </section>
+        <div class="Achievements-Summary">
             <dl class="Suppressant">
                 <img src="../assets/pictrs/Medic-logo.png" alt="">
                 <dt>Developers of the first effective oripathy suppressant</dt>
-                <dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus.</dd>
+                <dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna.</dd>
             </dl>
             <dl class="Envoys">
                 <img src="../assets/pictrs/BP_Zone_2.png" alt="">
                 <dt>Envoys of the lands</dt>
                 <dd>Rhodes Island was chosen by Iberia's Inquisition to be the official representatives of the lands and negociate with the underwater nation of Ægir in the first sea-land cooperation since over 200 years</dd>
             </dl>
-            <dl>
-                <img src="" alt="">
-                <dt></dt>
-                <dd></dd>
+            <dl class="Provisional">
+                <img src="../assets/pictrs/5eba4899a4bba50c1b2af15b3846ee1b.gif" alt="">
+                <dt>Provisional</dt>
+                <dd>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt minima dolor facilis earum ab alias praesentium libero.</dd>
             </dl>
-            <dl>
-                <img src="" alt="">
-                <dt></dt>
-                <dd></dd>
+            <dl class="Provisional2">
+                <img src="../assets/pictrs/Aegir.png" alt="">
+                <dt>Provisional2</dt>
+                <dd>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod nam iusto quaerat repellendus illo delectus.</dd>
             </dl>
-        </section>
+        </div>
     </main>
     <footer>
         <div class="Hypergryph">
