--- a/pages/Location.html
+++ b/pages/Location.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Find where are located our offices and hospitals">
+    <title>Rhodes Island - Location</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header id="Header-Mq">
         <a class="NavLogo" href="../index.html">
-            <img src="../assets/pictrs/BackgroundEraser_20241218_163847413.png" alt="">
+            <img src="../assets/pictrs/Navbar-img.png" alt="">
         </a>
         <nav>
             <ul class="NavBar">
@@ -27,51 +29,52 @@
     </header>
     <main>
         <section class="HeadBanner-Location">
-            <img src="../assets/pictrs/Background-Wilderness_Dusk.png" alt="">
-            <h1>“The bumps in this road, wether mine or yours We will cross them together as one”</h1>
+            <img src="../assets/pictrs/Location-Banner.png" alt="">
+            <h1>“The bumps in this road, wether mine or yours - We will cross them together, as one”</h1>
         </section>
-        <section class="Legend5">
+        <section class="Legend-Location">
             <h2>Reaching a hand, no matter where you are</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit magna interdum eu. Curabitur pellentesque nibh nibh, at maximus ante fermentum sit amet. Pellentesque commodo lacus at sodales sodales. Quisque sagittis orci ut diam condimentum, vel euismod erat placerat. In iaculis arcu eros, eget tempus orci facilisis id.</p>
+            <p>We are commited to help those who suffer from oriphaty, thats why we have numerous branches and hospitals around the world. But we will not stop here, and have plans to expand even further.</p>
         </section>
-        <section class="TextBlock1">
-            <div class="Text1">
+        <section class="Info-Location">
+            <h2>Where to find us</h2>
+            <p>We are the leaders in the treatment of oripathy, and our offices and hospitals reflect these advancements. Each one designed to be culturaly, echologicaly and socialy friendly.</p>
+            <div class="Branch-right">
+                <img src="../assets/pictrs/Office-Lungmen.png" alt="" data-aos="fade-zoom-in" data-aos-delay="100">
+                <h3 data-aos="fade-right" data-aos-delay="200">Yan</h3>
+                <span data-aos="fade-right" data-aos-delay="200">Located mainly at the borders of Lungmen Central Business District and core of the donwtown, our office and hospitals are located near main avenues and highways to facilitated their access.</span>
+            </div>
+            <div class="Branch-left">
+                <h3 data-aos="fade-left" data-aos-delay="200">Victoria</h3>
+                <span data-aos="fade-left" data-aos-delay="200">Our main branch office can be found in the central square of County Hillock, but we also have other hospitals and offices located in Londinium and County Connor as well.</span>
+                <img src="../assets/pictrs/Office-Victoria.png" alt="" data-aos="fade-zoom-in" data-aos-delay="100">
+            </div>
+            <div class="Branch-right">
+                <img src="../assets/pictrs/Office-Sargon.png" alt="" data-aos="fade-zoom-in" data-aos-delay="100">
+                <h3 data-aos="fade-right" data-aos-delay="200">Sargon</h3>
+                <span data-aos="fade-right" data-aos-delay="200">The Twinriver settlement, located in the Bayalir district, is where our branch office is found. Thanks to the iniciative of its Lord, we also have a medical warehouse in the Long Spring settlement.</span>
+            </div>
+            <div class="Branch-left">
+                <h3 data-aos="fade-left" data-aos-delay="200">Columbia</h3>
+                <span data-aos="fade-left" data-aos-delay="200">The city of Siesta is home of one of our biggest, most advanced hospitals. built with the help of the city's mayor, it its located in the borders of the Ultramodern District, near the main highway.</span>
+                <img src="../assets/pictrs/Office-Columbia.png" alt="" data-aos="fade-zoom-in" data-aos-delay="100">
+            </div>
+            <div class="Branch-right">
+                <img src="../assets/pictrs/Office-Bolivar.png" alt="" data-aos="fade-zoom-in" data-aos-delay="100">
+                <h3 data-aos="fade-right" data-aos-delay="200">Bolivar</h3>
+                <span data-aos="fade-right" data-aos-delay="200">Located in the city of Dossoles downtown outskirt, our branch office, as well has our hopital, where build with accessibility in mind and are easily reachable from any area of the residential sector.</span>
+            </div>
+            <div class="Branch-left">
+                <h3 data-aos="fade-left" data-aos-delay="200">Leithanien</h3>
+                <span data-aos="fade-left" data-aos-delay="200">Found in the Afterglow district of Vyseheim, near the acclaimed Afterglow Hall, are located our offices, clinic and medical warehouse.</span>
+                <img src="../assets/pictrs/Office-Leithanien.png" alt="" data-aos="fade-zoom-in" data-aos-delay="100">
+            </div>
+        </section>
+        <section class="Location-Landship">
                 <p>Alltrought we possesses many branches and offices in most mayor cities and are actively trying to reach further, our HQ is located in our unique state-of-the-art landship that gives the name of our company.</p>
-            </div>
-            <div class="Landship">
-                <img src="../assets/pictrs/f6bd0cf30fac98fc9bb5e35776242a11.png" alt="A full view of the Rhodes Island Landship">
-            </div>
-            <div class="LandshipText">
-                <p >A full view of the Rhodes Island Landship</p>
-            </div>
-            <div class="Text2">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit magna interdum eu. Curabitur pellentesque nibh nibh, at maximus ante fermentum sit amet. Pellentesque commodo lacus at sodales sodales. Quisque sagittis orci ut diam condimentum, vel euismod erat placerat. In iaculis arcu eros, eget tempus orci facilisis id.</p>
-            </div>
-            <div class="BridgeDiagram">
-                <img src="../assets/pictrs/R.I._Multi-layer_Bridge_Diagram.png" alt="The Rhodes Island adopts a multi-layer bridge system firmly connected by a series of giant brackets in a radial position, allowing easy access between the upper and lower decks.">
-                <p>The fifth and sixth levels of the Rhodes Island, the "upper deck", represent the landship's backbone, and it's mainly equipped with the navigation, operations, and intelligence center stations, as well as offices from various branches and aircraft hangars. The landship's navigation is relied on the assigned on-duty navigator, Dr. Almentar, and other related personnel; Meanwhile, Dr. Almentar is also responsible for formulating plans at the action command platform. Thanks to its automated control system, the manpower cost of the landship has been greatly reduced, therefore it only needs less permanent personnel during navigation than a conventional high-speed warship.</p>
-            </div>
-            <div class="BridgeText">
-                <p>The Rhodes Island adopts a multi-layer bridge system firmly connected by a series of giant brackets in a radial position, allowing easy access between the upper and lower decks.</p>
-            </div>
-            <div class="Text3">
-                <p>The top deck, located on the ship's stern at the uppermost floor, is where the main bridge is located. The frontal windows on the left and right sides provide a 180 degree field of view to ensure that the surrounding environment can be properly observed, while the rear area contains steering and engine equipment, as well as an information center to decipher and analyze intelligence data.</p>
-            </div>
-            <div class="Text4">
-                <p>The top deck is also reinforced by a solid multi-layer hull, with a small number of elevators, emergency structures, and skylight structures that can be locked down at any time in order to resist damage from Catastrophes. A large, internally-controlled elevator equipped with a helipad for aircraft takeoff, landing, or temporary parking directly connects the top deck with the hangars of the lower deck. Other structures and mechanisms such as the Early Warning System, the ground wave base station, the acoustic and optical sensor kit, and the large Raythean-manufactured electric retractable crane used for supply and bulk transport in the cargo bay are also located in the top deck, and play an important role for the landship's navigation.</p>
-            </div>
-            <div class="WarningSistem">
-                <p>The Shipboard Catastrophe Early Warning System consists of two main components; the information processing base station located at the top deck, and a probe filled with multiple weather balloons equipped with high-precision Originium sensors, designed to be always suspended above the stern even when the ship is moving. Once the towing rope is elevated to a high attitude, the real-time atmospheric activity data collected by the probe is send directly to the base station for preliminary processing, and later handed to our team ofprofessional catastrophe messengers for further analysis of the visualized data.</p>
-                <img src="../assets/pictrs/R.I._Early_Warning_System.png" alt="A diagram of the Early Warning System's probe and its internal sensors.">
-            </div>
-            <div class="WarningSistemText">
-                <p>A diagram of the Early Warning System's probe and its internal sensors.</p>
-            </div>
-            <div class="Text5">
-                <p>Most of the Rhodes Island main infrastructure is located at the third and fourth levels, the "middle deck". This includes the living quarters and supply storage equipped with crew cabins, cafeterias, botanical gardens, and other similar facilities, in addition to the Procurement and Market Department's store and the "Just One More Pint" bar managed by the Logistics Department. The middle Deck is considered the safest place within the landship against external damage, and as such many of R.I.'s key assets are located there, such as the PRTS control room. The Medical Department's branches and facilities are also located there to accommodate the patients who seek help from R.I.</p>
-            </div>
-            <div class="Text6">
-                <p>The "lower deck," consisted of the first and second floors, works as the landship's energy and power room, and only a few people actually go there except for the Engineering Department Operators, and occasionally Goliaths lending their services as boiler workers. Compared to the upper and middle decks, the lower deck is a rather lousy and stuffy workspace, yet many Engineering Operators are familiar with the environment. and The landship is powered by a high-energy Originium boiler installed above the chassis, which supplies energy to the turbine engine required to operate the crawlers, while the steering system is operated by an independently-operated electric engine. Furthermore, the hangar, drone warehouse, boarding channel, logistics processing center, power line hub, backup energy supply system, and the material and supply storages from the Engineering Department are also located there. A multi-stage telescopic ramp acts as a pathway for ground vehicles to board the ship. When the ramp is used, the telescopic pilars will rise and the guardrails will stand up in order to prevent personnel and vehicles to fall off the ramp.</p>
+                <img src="../assets/pictrs/Landship-View.png" alt="A full view of the Rhodes Island Landship">
+                <span>A full view of the Rhodes Island Landship</span>
+                <p>Ensamblated in Rim Billiton using the same tecnology that powers modern city-scale nomadic mobile plates. With more that 600 meters long, the Rhodes Island Landship is the second biggest landship and the most advanced large-scale mobile vehicle in the world, boasting multiple electrical generators, refineries, a greenhouse, training grounds, retractable catastrophe shields and warning sistems and capacity for over 3000 passengers and 2000 onboard personnel.</p>
             </div>
         </section>
     </main>
@@ -92,5 +95,9 @@
             <li>Contact</li>
         </ul>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 </html>
