--- a/pages/Oripathy.html
+++ b/pages/Oripathy.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="One of the most feared diseases know to date, learn more about its simptoms, transmition and how to detect it">
+    <title>Rhodes Island - Oripathy</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header>
+    <header id="Header-Mq">
         <a class="NavLogo" href="../index.html">
-            <img src="../assets/pictrs/BackgroundEraser_20241218_163847413.png" alt="">
+            <img src="../assets/pictrs/Navbar-img.png" alt="">
         </a>
         <nav>
             <ul class="NavBar">
@@ -27,9 +28,9 @@
     </header>
     <main>
         <section class="HeadBanner-Oripathy">
-            <img src="../assets/pictrs/From_Flesh_to_Dust.png" alt="">
-            <p class="OrSpeech1">“In most people's eyes, an Oripathy diagnosis is equivalent to a death sentence. But i think that to some extent, this disease, which brings extreme physical pain and both psychological and social pressure, is more terrifying than death itself”</p>
-            <p class="OrSpeech2">-Words from an annonymous Victorian doctor</p>
+            <img src="../assets/pictrs/Oripathy-Banner.png" alt="">
+            <p>“In most people's eyes, an Oripathy diagnosis is equivalent to a death sentence. But i think that to some extent, this disease, which brings extreme physical pain and both psychological and social pressure, is more terrifying than death itself”</p>
+            <span>-Words from an annonymous Victorian doctor.</span>
         </section>
         <section class="OrDescription">
             <h1>A malignant infectious disease. Patients will die soon after their bodies start to crystallize, and become new vectors of infection.</h1>
@@ -38,22 +39,23 @@
             <p>The crystallization will continue to spread through the patient's body, causing pain and discomfort and inhibiting their ability to breathe and properly intake and distribute nutrition. The process eventually causes medical complication and organ failure that could lead to death. Their body will immediately disintegrate post-mortem in a manner similar to spontaneous combustion - the crystals on their body start to glow, leaving behind Originium particle dust that can cause secondary Oripathy infections if the body is not isolated properly. In some cases, the Originium crystals inside the body may destabilize upon the host's death, causing an explosive chain reaction which turns the infected into a "living bomb" as seen with Infused Originium Slugs and its derivatives.</p>
             <p>A common misconception is that Oripathy will turn those infected with it into fearsome, capable Arts users. It is true that generally Oripathy patients will possess higher Originium Arts Assimilation due to an increase of assimilation of Originium, but in reality, each individual's Arts capability depends on both their innate traits and precarious mastery. Even if an Oripathy patient possesses powerful Arts in which they need not to rely on a catalyst, it has severe consequences.</p>
         </section>
-        <section class="Transmission">
+        <section class="OrInfo">
             <h2>Transmission</h2>
             <p>As stated above, the only way to contract Oripathy is direct contact with active Originium shards. These sources could range from survival from Catastrophes, crude Originium mining, industrial pollution, to accidental contact with a disintegrating infected corpse. Survival from Catastrophes is the worst form of contraction, since large amounts of microscopic active Originium shards pollutes the air and remain colorless and odorless, and it posts a severe threat if proper precautions are not met. Since the Crystal Age, more and more Originium product factories and Originium refineries are set up, making the  industrial pollution, alongside excessive mining, the sole factors of transmission, and people residing around industrial areas, mines, and sewage have a higher chance to contract the disease.</p>
             <p>There is a common myth that Oripathy can spread through physical contact with an infected person, although it has been long proven that person-to-person Oripathy transmission is very unlikely. This is because Oripathy is actually a transfusion transmitted infection that can only be transmitted via blood, and Originium granules inside the blood will become inactive in a matter of minutes once it is separated from the patient's body. As a result, there is a high possibility that Oripathy can be congenitally transmitted, especially between infected couples, making it a vertically transmitted infection that results in giving birth to children carrying the disease. Needle sharing too can transmit Oripathy if it is reused from an Infected, resulting in accidental transmission onto others within hospitals, so we and other specialized groups long urge hospitals to not practice needle exchange . Furthermore, contrary to popular belief, direct contact with inactive Originium will hardly cause an Oripathic infecton, since soldified Originum crystals, despite its hardened structure, don't possess any infection risks.</p>
         </section>
-        <section class="Diagnosis">
+        <section class="OrInfo">
             <h2>Diagnosis</h2>
             <p>Before the 1040s when angiography, or imaging test by layman term, was invented, many crude methods were tried by many Terran societies, but all of them were inaccurate. One method is to hire a caster to examinate the infected's blood. By dropping small amounts of blood onto their hands, the caster will try to activate their Arts using their blood; one that enables it signifies the presence of Oripathy. However, its disadvantages is pretty obvious: Arts could not activate in the blood of early stage Oripathy, and not all patients could activate Arts. In modern days, this method has long been discharged in favor of modern science, yet it inspires medical scholars to investigate the relationship between blood and Originium. In adition, a large number of supposed Oripathy treatments also circulated at the time, which are seen as illogical by modern standards.</p>
             <p>The modern angiography was invented by a Leithanian scholar who noticed that blurry outlines will form around an infected's internal organs and blood vessels under exposure of a specific electromagnetic radiation. Angiography not only could precisely diagnose an early stage Oripathy, but also, the result can be produced within less than three hours. In 1046, in order to further prove the modern Oripathy theory, Victorian scholar Wilson Jayson designed the famous "Burdenbeast Originium Experiment", which consisted of dividing a group of burdenbeasts into several smaller ones and place them in three different enviroments; One without Originium, another with inactive Originium, and another with active Originium. After the same period of time, it was determined while comparing the experimental group and the control groups that there's a positive corelation between the number of Infected burdenbeasts and the amount of active originium in the living enviroment. Further autopsies on the test burdenbeasts set the basis for the modern angiography standards based on visible crystaization and dissection results. Since then, this modern technology becomes the sole clinical diagnosis to Oripathy patients.</p>
             <p>There have been medical cases where Oripathy patients miraculously "healed" long before angiography was introduced. Even until present days, these reports could still be found across Terra, and in some nations like Sargon, it is treated as some sort of "divine miracle". Sometimes, this phenomenon is the result of "false recovery," a status in which the patient's Oripathy goes dormant for a long period of time due to outside forces (e.g. Arts reaction), but the assimilation on a microscopic scale will quietly accelerate, resulting in the patient immediately suffers from sever symptoms after reaching the end of the period. In the 1070s, the Royal Victorian Academy of Sciences reviewed various historical records about supposed Oripathy cures, most of which lacking actual conclusive evidence.</p>
         </section>
-        <section class="Treatment">
+        <section class="OrInfo">
             <h2>Treatment</h2>
-            <p>So far there is no known cure for Oripathy, although we are actively trying to find one. However, Rhodes Island has developed certain treatments which can slow the effects of an active Oripathy. The most common method is our Oripathy suppressant, a specially made protein that stimulates living cell regeneration, forms a protective protein cover to halt further assimilation of Originium granules, and disperse the "energy" spread by the granules to prevent disintegration. The damaged parts of the infected patient's body can also be treated with conventional methods if they are in the early stage (e.g. amputation of crystalized body parts).</p>
+            <p>So far there is no known cure for Oripathy, although we are actively trying to find one. However, Rhodes Island has developed certain treatments which can halt the effects of an active Oripathy. The most common method is our Oripathy suppressant, a specially made protein that stimulates living cell regeneration, forms a protective protein cover to halt further assimilation of Originium granules, and disperse the "energy" spread by the granules to prevent disintegration. The damaged parts of the infected patient's body can also be treated with conventional methods if they are in the early stage (e.g. amputation of crystalized body parts).</p>
+            <p>Rhodes Island also offers complete custom-made medical treatment courses, adaptable to each individual patient life-style and conditions, that can succesfully stop the proggresion of the infection, available at any of our international branches, hospitals or on-board our landship, depending of the patients needs and preferences.</p>
         </section>
-        <section class="Stages">
+        <section class="OrStages">
             <h2>Stages</h2>
             <p>The severity of one's Oripathy is measured through how much the Originium particles have assimilated with the Infected's cells (Cell-Originium Assimilation) measured by its percentage, and the density of Originium particles in every liter of the Infected's blood (Blood Originium-Crystal Density) under the measurement standard of unit per liter (u/L).</p>
             <p>Using this method, Oripathy is divided into three stages:</p>
@@ -63,7 +65,7 @@
                     <li>-Stage III (late): The patient possesses excessively high amounts of Originium granules in their circulatory system that makes it hard to be detected. It exceeds 0.50 u/L. and, in some cases, even surpasses the dead line of 0.80 u/L. The body becomes crystalized and grows abnormal body parts. The patient losses mobility and suffers from organ failure. This stage is considered the terminal stage in which current medical methods are no longer applicable.</li>
                 </ul>
             <img class="OripathyDepictionImg" src="../assets/pictrs/Oripathy_Stage_Graphic_Depiction.png" alt="">
-            <p class="OripathyDepictionText">A pictorial depiction of the three stages of Oripathy, though the third stage usually does not come in such an exaggerated form.</p>
+            <span>A pictorial depiction of the three stages of Oripathy, though the third stage usually does not come in such an exaggerated form.</span>
         </section>
     </main>
     <footer>
