--- a/pages/Services.html
+++ b/pages/Services.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Medical research and treatment are our specialties, but they are not our sole areas of expertice">
+    <title>Rhodes Island - Services</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header>
+    <header id="Header-Mq">
         <a class="NavLogo" href="../index.html">
-            <img src="../assets/pictrs/BackgroundEraser_20241218_163847413.png" alt="">
+            <img src="../assets/pictrs/Navbar-img.png" alt="">
         </a>
         <nav>
             <ul class="NavBar">
@@ -27,44 +28,44 @@
     </header>
     <main>
         <section class="HeadBanner-Services">
-            <img src="../assets/pictrs/RI_Landship_1.png" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna.</p>
+            <img src="../assets/pictrs/Services-Banner.png" alt="">
+            <p>With our goal set on changing the world, we cannot limit ourselves.</p>
         </section>
-        <section class="Legend4">
+        <section class="Legend-Services">
             <h1>More that what meets the eye</h1>
             <p>In Rhodes Island, aside from R&D and distribution of medicines, we actively participate in a broad spectrum of activities that go from mining to goods exportation and more.</p>
         </section>
-        <section class="Medical">
-            <img src="../assets/pictrs/Background-RI_Ward.png" alt="">
+        <section class="Services-Left">
+            <img src="../assets/pictrs/Services-1.png" alt="">
             <h2>The vanguard in oripathy treatment</h2>
             <h3>We are the leading company in the development of treatments and drugs against oripathy.</h3>
         </section>
-        <div class="MedicalText">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit magna interdum eu. Curabitur pellentesque nibh nibh, at maximus ante fermentum sit amet. Pellentesque commodo lacus at sodales sodales. Quisque sagittis orci ut diam condimentum, vel euismod erat placerat. In iaculis arcu eros, eget tempus orci facilisis id.</p>
+        <div class="Services-Text">
+            <p>The infection of Oripathy and everything that surround it has allways been shrouded in frear, misinformation and alienation, thats why we choose to step forward and face this treat lending a helping hand to those who suffer from it. We have developed the best drugs and treatment courses to combat oripathic infections, through innovations and novel discoveries in medical sciences and biologic engineering thanks to our talented proffesionals and colaborators.</p>
         </div>
-        <section class="Mining">
-            <img src="../assets/pictrs/RI_Landship_2.png" alt="">
+        <section class="Services-Right">
+            <img src="../assets/pictrs/Services-2.png" alt="">
             <h2>Mining and self-susteinance</h2>
-            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna.</h3>
+            <h3>Tackling the problem at its root, by imparting the knowledg to advert the danger.</h3>
         </section>
-        <div class="MiningText">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris.</p>
+        <div class="Services-Text">
+            <p>Is no secret that the mining industry is one of the mayor reasons of the quick spread of Oripathy, and to try to cut the problem at its root, we entered in this field with firm hand. Thanks to the size of our landship and the expertise of our team of proffesional geologist and engineers, we count with advanced mineral extraction devices and facilities that, alongside diverse contracts with local goverments and mining companies, alough us to hold a competitive position in the field on top of giving us the oportunity to impart the adequate saffety measures when mining and handling crude Originium and its byproducts to our partners and producing part the fuel required to operate our sistems has a byproduct.</p>
         </div>
-        <section class="STONKS">
-            <img src="../assets/pictrs/Background-RI_Corridor.png" alt="">
+        <section class="Services-Left">
+            <img src="../assets/pictrs/Services-3.png" alt="">
             <h2>Trade and exportation</h2>
-            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi.</h3>
+            <h3>Lending a hand to those who need it, no mather the distance.</h3>
         </section>
-        <div class="STONKSText">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit magna interdum eu.</p>
+        <div class="Services-Text">
+            <p>The dimensions of our landship alow us to be able to engage in many activities, and thanks to specialized warehouses and production facilities located inside the ship, alongside the nomadic nature of our HQ, we can engage in trasnportation and delivery of different tipes of goods, that go from medical items and food to military equipment, thanks to our partnership with Raythean Industryes.</p>
         </div>
-        <section class="PROTEC">
-            <img src="../assets/pictrs/Rhodes_Island_Paramilitary_Force.png" alt="">
+        <section class="Services-Right">
+            <img src="../assets/pictrs/Services-4.png" alt="">
             <h2>Defence and security</h2>
-            <h3>To protect our employees, partners, patients and those in need</h3>
+            <h3>To protect our employees, partners, patients and those in need.</h3>
         </section>
-        <div class="PROTECText">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue.</p>
+        <div class="Services-Text">
+            <p>Those wo suffer from Oripathy are summited to osthrasition and alienation, this has been the norm for far too long and we believe that the moment to bring change is now. That said, with how deep this hatred has buried its roots in our society is natural that many will resist to this change. To avoid damage to our patients, facilities and colaborators, Rhodes Island poses its own private military force highly trained and dispatched in every one of our branches and hospitals to ensure the safety of our facilities, employees and patients.</p>
         </div>
     </main>
     <footer>
