--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="The leading company in originium research and oriphaty treatment in the world">
+    <title>Rhodes Island - Home</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <header>
-        <a class="NavLogo" href="#">
-            <img src="./assets/pictrs/BackgroundEraser_20241218_163847413.png" alt="">
+        <a href="#">
+            <img src="./assets/pictrs/Navbar-img.png" alt="">
         </a>
         <nav>
-            <ul class="NavBar">
+            <ul>
                 <li><a href="./pages/About-Us.html">About Us</a></li>
                 <li><a href="./pages/Affiliates.html">Affiliates</a></li>
                 <li><a href="./pages/Services.html">Services</a></li>
@@ -26,52 +28,50 @@
         </nav>
     </header>
     <main>
-        <section class="HeadBanner-index">
+        <section class="HeadBanner-Index">
             <img src="./assets/pictrs/Rhodes_Island.png" alt="">
-            <p class="Motto1">“May I enjoy my life and practice my art Respected by all men and in all times”</p>
-            <p class="Motto2">-Rhodes Island Motto</p>
+            <p>“May I enjoy my life and practice my art Respected by all men and in all times”</p>
+            <span>-Rhodes Island Motto</span>
         </section>
-        <section class="Legend1">
+        <section class="Legend-Index">
             <h1>Fighting for a new dawn</h1>
             <p>Rhodes Island is a pharmaceutical company dedicated to develop treatments and a possible cure for oripathy. We are the leading company in originium research and oriphaty treatment in the world, working alongside other companies and organizations such as Rhine Labs, The Maylander Foundation and BlackSteel Worldwide to not only find a cure to oriphaty, but to put an end to all originium-related conficts and build bridges of understanding and trust betwin the diferent races of Terra.</p>
         </section>
-        <section class="InfoBlock1">
-            <div class="SubBanner1">
-                <img class="SubBanner1img1" src="./assets/pictrs/Background-RI_Bridge.png" alt="">
-                <img class="SubBanner1img2" src="./assets/pictrs/Background-RI_Hallway.png" alt="">
-                <img class="SubBanner1img3" src="./assets/pictrs/Background-RI_Upper_Deck.png" alt="">
-                <img class="SubBanner1img4" src="./assets/pictrs/Background-RI_Medical_Bay.png" alt="">
+        <section class="InfoBlock-Index">
+            <a href="./pages/Services.html" class="About-Shortcut" data-aos="fade-right" data-aos-delay="300">
+                <img src="./assets/pictrs/Index-img1.png" alt="">
                 <p>In Rhodes Island, aside for counting with the best medical equipment and experts, we also offer services of importation, extraction and processing of minerals, security services and more.</p>
-                <a href="./pages/Services.html">See more</a>
-            </div>
-            <section class="SubBanner2">
-                <div class="Rhine">
-                    <img src="./assets/pictrs/Rhine_Lab.png" alt="">
-                </div>
-                <div class="BSW">
-                    <img src="./assets/pictrs/Blacksteel.png" alt="">
-                </div>
-                <div class="Maylander">
-                    <img src="./assets/pictrs/Maylander.png" alt="">
-                </div>
-                <p>Working alongside our partners, we seek to help in the devopment of novel tecnologies and dispel the predjuce and alienation among races.</p>
-                <a href="./pages/Affiliates.html">See more</a>
-            </section>
-            <div class="SubBanner3">
-                <img src="./assets/pictrs/Background-Camped_Convoy.png" alt="">
+                <span>See more</span>
+            </a>
+            <a href="./pages/Affiliates.html" class="Affiliates-Shortcut" data-aos="fade-left" data-aos-delay="300">
+                <img src="./assets/pictrs/Index-img2.png" alt="">
+                <p>Working alongside our partners, we seek to help in the devopment of novel tecnologies and dispel the predjuce and alienation among the diferent races of Terra.</p>
+                <span>See more</span>
+            </a>
+            <a href="./pages/Oripathy.html" class="Oripathy-Shortcut" data-aos="fade-zoom-in"
+            data-aos-easing="ease-in-back"
+            data-aos-delay="500"
+            data-aos-offset="0">
+                <p class="P1">There are many aspects of this disease that arent fully understood, but we cannot quiver against the fear of the unknown.</p>
+                <img src="./assets/pictrs/Originium.png" alt="">
+                <p class="P2">To avoid the spreading of missinformation, is imperative to make the corretc knownlegh available to everyone.</p>
+                <span>See more</span>
+            </a>
+            <a href="./pages/Location.html" class="Location-Shortcut" data-aos="fade-right" data-aos-delay="300">
+                <img src="./assets/pictrs/Index-img3.png" alt="">
                 <p>As a way to achieve our goal, Rhodes Island trives to reach every corner of the world to aid those in need. We have brach offices and hospitals in almost all mayor countries and are trying our best to expand ourselves.</p>
-                <a href="./pages/Location.html">See more</a>
-            </div>
+                <span>See more</span>
+            </a>
         </section>
     </main>
     <footer>
-        <div class="Hypergryph">
+        <div >
             <img src="./assets/pictrs/Company-Logo_Hypergryph.png" alt="">
         </div>
-        <div class="Gryphline">
+        <div>
             <img src="./assets/pictrs/Company-Logo_GRYPHLINE.png" alt="">
         </div>
-        <div class="Yostar">
+        <div>
             <img src="./assets/pictrs/Company-Logo_YOSTAR.png" alt="">
         </div>
         <ul>
@@ -81,5 +81,9 @@
             <li>Contact</li>
         </ul>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 </html>
