--- a/pages/Join-Us.html
+++ b/pages/Join-Us.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Join our team and help us change the future">
+    <title>Rhodes Island - Join Us</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header>
+    <header id="Header-Mq">
         <a class="NavLogo" href="../index.html">
-            <img src="../assets/pictrs/BackgroundEraser_20241218_163847413.png" alt="">
+            <img src="../assets/pictrs/Navbar-img.png" alt="">
         </a>
         <nav>
             <ul class="NavBar">
@@ -30,19 +31,19 @@
             <img src="../assets/pictrs/Join_Background.png" alt="">
             <span>Help us save more lives</span>
         </section>
-        <section class="InfoBlock2">
+        <section class="RecruitText-Join">
             <h1>Join our team</h1>
-            <p>At Rhodes Island, some of the world's most talented people come together to push forward  the limits of modern originium and medical science, we in return invest in them so they can grow and develope themselfs. </p>
-            <p>If you are ready to change the world, see the list of open positions below.</p>
+            <p class="jointext1">At Rhodes Island, some of the world's most talented people come together to push forward  the limits of modern originium and medical science, we in return invest in them so they can grow and develope themselfs. </p>
+            <p class="jointext2">If you are ready to change the world, see the list of open positions below.</p>
             <button>Browse open positions</button>
-            <p>Interested Applicants: Please be aware of the potential for scams from individuals, organizations and intern-city network sites that claim to represent Rhodes Island Pharmaceuticals Incorporated in recruitment activities. Rhodes Island conducts a formal recruitment process for all authorized positions posted and does not conduct interviews via social media or other third-party sites. Please report any suspicious recruiting activity to your local justice department.</p>
+            <span>Interested Applicants: Please be aware of the potential for scams from individuals, organizations and intern-city network sites that claim to represent Rhodes Island Pharmaceuticals Incorporated in recruitment activities. Rhodes Island conducts a formal recruitment process for all authorized positions posted and does not conduct interviews via social media or other third-party sites. Please report any suspicious recruiting activity to your local justice department.</span>
         </section>
-        <section class="SubBanner4">
-            <img src="../assets/pictrs/Background-RI_Convalescent_Garden.png" alt="">
+        <section class="SubBanner-Join">
+            <img src="../assets/pictrs/Background-Convalescent_Garden.png" alt="">
             <h2>What makes us special?</h2>
-            <p>We beleive in the individual potencial of every single one of our employees and hold the visions and values of those wo precede us, in Rhodes Island every person, regadless of status or health condition, is equally valuable and worthy of respect.</p>
+            <p>We beleive in the individual potencial of every single one of our employees and hold the visions and values of those who precede us, in Rhodes Island every person, regadless of status or health condition, is equally valuable and worthy of respect.</p>
         </section>
-        <section class="InfoBlock3">
+        <section class="InfoBlock-Join">
             <h2>More than a job</h2>
             <p>Rhodes Island employees are supported along their professional journeys and have the opportunity to grow and thrive in an inclusive and equitable environment that suits their proffessional skills and rewards every one of their achievements. We want to support your career from the beginning and along every step of the way, and we offer career growth and development opportunities regardless of your role or experience level.</p>
             <p>Our employees can also request to be assigned to one of our numerous international brachs or choose to stay full-time onboard our landship, and enjoy paid vacations depending on their work hours and contributions to the company. Flexibility and confort for our employees is a cornerstone of our etics, after all, if we want to make a better world, the first one to take the first step toward that goal has to be us.</p>
